[package]
name = "denegnet"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

cacache = { version = "13.1", default-features = false, features = [
  "tokio-runtime",
  "mmap",
] }

alloy = { version = "1.0", features = ["full", "node-bindings"] }
revm = { version = "29.0", features = ["alloydb"] }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

execution-time = "0.3"
